# tradingview-mcp

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/tradingview_mcp/: server.py
src/tradingview_mcp/assetlist/: szse.txt  tpex.txt  twse.txt
src/tradingview_mcp/core/services/: egx_service.py  scanner_service.py  screener_service.py
src/tradingview_mcp/core/utils/: validators.py
tests/unit/: test_validators.py
