[project]
name = "tradingview-mcp-server"
version = "0.7.1"
description = "Advanced AI Trading Intelligence Framework — MCP server with walk-forward backtesting, trade logs, equity curves, 1h timeframe, sentiment, Yahoo Finance, and 30+ technical analysis tools"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Atila Ahmettaner" }
]
urls = { Repository = "https://github.com/atilaahmettaner/tradingview-mcp" }
keywords = ["mcp", "tradingview", "crypto", "technical analysis", "screener", "backtesting", "walk-forward", "sentiment", "yahoo-finance", "trading", "agents", "algorithmic-trading", "equity-curve"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
  "feedparser>=6.0.12",
  "mcp[cli]>=1.13.1",
  "tradingview-screener>=0.6.4",
  "tradingview-ta>=3.3.0",
]

[project.scripts]
# Entry point now points to packaged module
tradingview-mcp = "tradingview_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tradingview_mcp = ["coinlist/*.txt"]

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.3",
    "black>=23.0.0",
]

package = true

[tool.black]
# Black 代码格式化工具配置
line-length = 88                    # 行长度限制（Black 默认）
target-version = ["py310"]          # 目标 Python 版本
include = '\.pyi?$'                 # 包含的文件模式
extend-exclude = '''
# 排除的文件和目录
/(
  # 虚拟环境
  \.venv
  | venv
  | \.env
  # 构建目录
  | build
  | dist
  | \.eggs
  | \.egg-info
  # 缓存目录
  | __pycache__
  | \.pytest_cache
  | \.mypy_cache
  # 其他
  | \.git
  | \.tox
)/
'''
# 保持字符串引号风格一致
skip-string-normalization = false
# 预览模式功能（可选，启用最新格式化特性）
preview = false

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
